--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
+/* src/App.css */
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+body, html, #root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
